--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     },
     "dependencies": {
         "express": "^4.17.1",
+        "helmet": "^4.6.0",
         "knex": "^0.95.14",
+        "nanoid": "^3.1.30",
         "sqlite3": "^5.0.2"
     },
     "devDependencies": {
@@ -23,6 +25,7 @@
         "eslint": "^8.3.0",
         "jest": "^27.3.1",
         "knex-cleaner": "^1.3.1",
+        "morgan": "^1.10.0",
         "nodemon": "^2.0.15",
         "supertest": "^6.1.6"
     }
